one-click-infra/jenkins.tf
# Security Group for Jenkins

resource "aws_security_group" "jenkins_sg" {
  name        = "jenkins-sg"
  description = "Allow SSH and Jenkins"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins UI"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Jenkins EC2 Instance

resource "aws_instance" "jenkins" {

  ami                    = "ami-0f58b397bc5c1f2e8"   # Ubuntu 22.04 ap-south-1
  instance_type          = "t3.medium"
  subnet_id = aws_subnet.public_1.id
  vpc_security_group_ids = [aws_security_group.jenkins_sg.id]

  associate_public_ip_address = false

  tags = {
    Name = "jenkins-server"
  }
}
